tree-sitter/tree-sitter-ocaml/ocaml/grammar.js
    compilation_unit: $ => seq(
      optional($.shebang),
      optional($._structure)
    ),

    _structure: $ => choice(
      repeat1(';;'),
      seq(
        repeat(';;'),
        choice($._structure_item, $.toplevel_directive, $.expression_item),
        repeat(choice(
          seq(repeat(';;'), choice($._structure_item, $.toplevel_directive)),
          seq(repeat1(';;'), $.expression_item)
        )),
        repeat(';;')
      )
    ),

    value_definition: $ => seq(
      choice(seq('let', optional($._attribute), optional('rec')), $.let_operator),
      sep1(choice('and', $.let_and_operator), $.let_binding)
    ),

    let_binding: $ => prec.right(seq(
      field('pattern', $._binding_pattern),
      optional(seq(
        repeat($._parameter),
        optional($._polymorphic_typed),
        optional(seq(':>', $._type)),
        '=',
        field('body', $._sequence_expression),
      )),
      repeat($.item_attribute)
    )),

    _parameter: $ => choice(
      $.parameter,
      alias($._parenthesized_abstract_type, $.abstract_type)
    ),

    parameter: $ => choice(
      field('pattern', $._simple_pattern),
      seq(
        choice('~', '?'),
        field('pattern', alias($._identifier, $.value_pattern))
      ),
      seq(
        $._label,
        token.immediate(':'),
        field('pattern', $._simple_pattern)
      ),
      seq(
        choice('~', '?'),
        '(',
        field('pattern', alias($._identifier, $.value_pattern)),
        optional($._typed),
        optional(seq('=', $._sequence_expression)),
        ')'
      ),
      seq(
        $._label,
        token.immediate(':'),
        '(',
        field('pattern', $._pattern),
        optional($._typed),
        seq('=', $._sequence_expression),
        ')'
      )
    ),

    include_module: $ => seq(
      'include',
      optional($._attribute),
      $._module_expression,
      repeat($.item_attribute)
    ),

    _simple_module_expression: $ => choice(
      $.typed_module_expression,
      $.parenthesized_module_expression,
      $.packed_module,
      $._extension
    ),

    _module_expression: $ => choice(
      $._simple_module_expression,
      $.module_path,
      $.structure,
      $.functor,
      $.module_application
    ),

    module_application: $ => seq(
      field('functor', $._module_expression),
      choice(
        field('argument', $._simple_module_expression),
        seq('(', ')')
      )
    ),

    parenthesized_module_expression: $ => parenthesize($._module_expression),

    // Class types

    _typed: $ => seq(':', $._type),

    _polymorphic_typed: $ => seq(':', $._polymorphic_type),

    polymorphic_type: $ => seq(
      choice(
        repeat1($.type_variable),
        alias($._abstract_type, $.abstract_type)
      ),
      '.',
      $._type
    ),

    _abstract_type: $ => seq(
      'type',
      repeat1($._type_constructor)
    ),

    _simple_type: $ => choice(
      $.type_variable,
      $.type_constructor_path,
      $.constructed_type,
      $.polymorphic_variant_type,
      $.package_type,
      $.hash_type,
      $.object_type,
      $.parenthesized_type,
      $._extension
    ),

    _type: $ => choice(
      $._tuple_type,
      $.function_type,
      $.aliased_type,
    ),

    constructed_type: $ => prec(PREC.app, seq(
      choice(
        $._simple_type,
        parenthesize(sep1(',', $._type))
      ),
      $.type_constructor_path
    )),

    _expression: $ => choice(
      $._simple_expression,
      $.product_expression,
      $.cons_expression,
      $.application_expression,
      $.infix_expression,
      $.sign_expression,
      $.set_expression,
      $.if_expression,
      $.while_expression,
      $.for_expression,
      $.match_expression,
      $.function_expression,
      $.fun_expression,
      $.try_expression,
      $.let_expression,
      $.assert_expression,
      $.lazy_expression,
      $.let_module_expression,
      $.let_open_expression,
      $.let_exception_expression
    ),

    _sequence_expression: $ => choice(
      $._expression,
      $.sequence_expression
    ),

    product_expression: $ => prec.left(PREC.prod, seq(
      field('left', $._expression),
      ',',
      field('right', $._expression)
    )),

    _simple_pattern: $ => choice(
      $._value_pattern,
      $._signed_constant,
      $.typed_pattern,
      $.constructor_path,
      $.tag,
      $.polymorphic_variant_pattern,
      $.record_pattern,
      $.list_pattern,
      $.array_pattern,
      $.local_open_pattern,
      $.package_pattern,
      $.parenthesized_pattern,
      $._extension
    ),

    _pattern: $ => choice(
      $._simple_pattern,
      $.alias_pattern,
      $.or_pattern,
      $.constructor_pattern,
      $.tag_pattern,
      $.tuple_pattern,
      $.cons_pattern,
      $.range_pattern,
      $.lazy_pattern,
      $.exception_pattern
    ),

    _binding_pattern: $ => choice(
      $._value_name,
      $._signed_constant,
      alias($.typed_binding_pattern, $.typed_pattern),
      $.constructor_path,
      $.tag,
      $.polymorphic_variant_pattern,
      alias($.record_binding_pattern, $.record_pattern),
      alias($.list_binding_pattern, $.list_pattern),
      alias($.array_binding_pattern, $.array_pattern),
      alias($.local_open_binding_pattern, $.local_open_pattern),
      $.package_pattern,
      alias($.parenthesized_binding_pattern, $.parenthesized_pattern),
      alias($.alias_binding_pattern, $.alias_pattern),
      alias($.or_binding_pattern, $.or_pattern),
      alias($.constructor_binding_pattern, $.constructor_pattern),
      alias($.tag_binding_pattern, $.tag_pattern),
      alias($.tuple_binding_pattern, $.tuple_pattern),
      alias($.cons_binding_pattern, $.cons_pattern),
      $.range_pattern,
      alias($.lazy_binding_pattern, $.lazy_pattern),
      $._extension
    ),

    tuple_pattern: $ => prec.left(PREC.prod, seq(
      $._pattern,
      ',',
      $._pattern
    )),

    parenthesized_pattern: $ => parenthesize($._pattern),

    _attribute: $ => seq('%', $.attribute_id),

    // Constants

    _infix_operator: $ => choice(
      $.pow_operator,
      $.mult_operator,
      $.add_operator,
      $.concat_operator,
      $.rel_operator,
      $.and_operator,
      $.or_operator,
      $.assign_operator
    ),

    add_operator: $ => choice(
      /[+-]/, /[+-]\./,
      token(choice(
        seq('+', repeat1(OP_CHAR)),
        seq('-', choice(repeat1(/[!$%&*+\-./:<=?@^|~]/), repeat2(OP_CHAR)))
      ))
    ),

    let_operator: $ => token(
      seq('let', /[$&*+\-/<=>@^|]/, repeat(OP_CHAR))
    ),

    let_and_operator: $ => token(
      seq('and', /[$&*+\-/<=>@^|]/, repeat(OP_CHAR))
    ),

    _value_name: $ => choice(
      alias($._identifier, $.value_name),
      $.parenthesized_operator
    ),

    parenthesized_operator: $ => parenthesize(choice(
      $.prefix_operator,
      $._infix_operator,
      $.hash_operator,
      seq(
        '.',
        $.indexing_operator,
        choice(
          seq('(', optional(seq(';', '..')), ')'),
          seq('[', optional(seq(';', '..')), ']'),
          seq('{', optional(seq(';', '..')), '}')
        ),
        optional('<-')
      ),
      $.let_operator,
      $.let_and_operator,
      $.match_operator
    )),

    value_path: $ => path($.module_path, $._value_name),

    module_path: $ => prec(1, path($.module_path, $._module_name)),

    type_constructor_path: $ => path($.extended_module_path, $._type_constructor),

    _type_constructor: $ => alias($._identifier, $.type_constructor),
    _module_name: $ => alias($._capitalized_identifier, $.module_name),
    _identifier: $ => /[a-z_][a-zA-Z0-9_']*/,
    _capitalized_identifier: $ => /[A-Z][a-zA-Z0-9_']*/,

    _label: $ => seq(choice('~', '?'), $._label_name),
    type_variable: $ => seq(/'/, choice($._identifier, $._capitalized_identifier)),
    attribute_id: $ => sep1(/\./, choice($._identifier, $._capitalized_identifier))
  },
